create healtCheck service

--- a/src/main/resources/healthChecker-prod.properties
+++ b/src/main/resources/healthChecker-prod.properties
@@ -1,3 +1,7 @@
-receiver.email = prod@email.com
-receiver.password = <YOUR-PASSWORD>
+email.receiver.username = prod@email.com
+email.sender.username = no_reply@prod.com
+email.sender.password = <YOUR-PASSWORD>
 
+host.url = https://google.com
+host.timeout = 3000
+host.errorCount = 5
