--- a/src/main/resources/healthChecker-staging.properties
+++ b/src/main/resources/healthChecker-staging.properties
@@ -1,3 +1,7 @@
-receiver.email = staging@email.com
-receiver.password = <YOUR-PASSWORD>
+email.receiver.username = stag@email.com
+email.sender.username = no_reply@stag.com
+email.sender.password = <YOUR-PASSWORD>
 
+host.url = https://google.com
+host.timeout = 5000
+host.errorCount = 10
