--- a/src/main/resources/healthChecker-dev.properties
+++ b/src/main/resources/healthChecker-dev.properties
@@ -1,3 +1,8 @@
-receiver.email = dev@email.com
-receiver.password = <YOUR-PASSWORD>
+email.receiver.username = dev@email.com
+email.sender.username = no_reply@dev.com
+email.sender.password = <YOUR-PASSWORD>
 
+
+host.url = https://google.com
+host.timeout = 5000
+host.errorCount = 10
